--- a/day456/css/style.css
+++ b/day456/css/style.css
@@ -25,6 +25,7 @@ header {
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+    flex-wrap: ;
     align-items: center;
 }
 
