--- a/day456/css/style.css
+++ b/day456/css/style.css
@@ -25,7 +25,7 @@ header {
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    flex-wrap: ;
+    flex-wrap: wrap;
     align-items: center;
 }
 
@@ -107,7 +107,7 @@ header {
     cursor: pointer;
 }
 
-.services__slider .item::before{
+.services__slider .item::before {
     content: '';
     height: 0;
     background-color: #af2239;
@@ -117,12 +117,12 @@ header {
     right: 0;
 }
 
-.services__slider .item:hover::before{
+.services__slider .item:hover::before {
     height: 100%;
     transition: all .5s;
 }
 
-.services__slider .item i{
+.services__slider .item i {
     font-size: 40px;
     margin-bottom: 10px;
 }
@@ -161,7 +161,27 @@ header {
     background-color: rgb(185, 185, 185);
     text-align: center;
 }
-.showcase__content{
+
+.showcase__content {
+    width: 70%;
+    margin: auto;
     display: grid;
-    grid-template-columns: 33,33;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+}
+
+.showcase__item {
+    height: 408px;
+}
+
+.showcase__item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: grayscale(100%) contrast(0.5);
+}
+
+.showcase__icon {
+    background: #fff;
+
 }
