--- a/homework/day3/css/main.css
+++ b/homework/day3/css/main.css
@@ -21,6 +21,7 @@ header{
 }
 nav{
     display: flex;
+    align-items: center;
 }
 nav li {
     list-style: none;
@@ -43,4 +44,21 @@ nav li a:hover{
 
 nav ul {
     margin: 0 20px 0 0;
+}
+
+nav button{
+    padding: 15px 35px;
+    display: inline-block;
+    border: none;
+    border-radius: 30px;
+    color: #fff;
+    font-weight: 700;
+    text-transform: uppercase;
+    background: linear-gradient(to left,#f55f8d 0,#f8ae56 51%,#f55f8d 100%);
+    transition: all .5s;
+    cursor: pointer;
+}
+
+nav button:hover{
+    background: linear-gradient(to right,#f55f8d 0,#f8ae56 51%,#f55f8d 100%);
 }
