--- a/day456/css/style.css
+++ b/day456/css/style.css
@@ -194,7 +194,7 @@ header {
     transition: all .5s;
 }
 
-.showcase__item:hover .showcase__overlay{
+.showcase__item:hover .showcase__overlay {
     opacity: 1;
 }
 
@@ -235,11 +235,60 @@ header {
 
 /* BLOG */
 
-.blog__content{
+.blog__content {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
 }
 
-.blog__item img{
+.blog__mvp {
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
+}
+
+.blog__mvp__2 {
+    grid-column: 3 / 5;
+    grid-row: 3 / 5;
+}
+
+.blog__item {
+    overflow: hidden;
+}
+
+.blog__item img {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
+    transform: scale(1);
+    transition: all .5s;
+}
+
+.blog__item:hover img {
+    transform: scale(1.2);
+}
+
+/* NUMBER */
+.number{
+    background-color: #111;
+    padding: 100px 0;
+}
+.number__content{
+    display: flex;
+    width: 70%;
+    margin: auto;
+    justify-content: space-evenly;
+}
+.number__item{
+    color: #fff;
+    font-size: 24px;
+    text-align: center;
+}
+
+.number__item p:first-child{
+    color:fff;
+    font-size: 4rem;
+}
+
+.number__item p:last-child{
+    color:rgb(185, 185, 185);
+    text-transform: uppercase;
 }
