--- a/day456/css/style.css
+++ b/day456/css/style.css
@@ -75,11 +75,23 @@ header {
     cursor: pointer;
 }
 
+
 .carousel__content button:hover {
     background-color: #af2239;
     border: 1px solid #af2239;
 }
 
+.carousel__content a {
+    text-decoration: none;
+    font-weight: bold;
+    color: #fff;
+}
+
+.carousel__arrow i{
+    margin-top: 20px;
+    font-size: 1.5rem;
+    animation: rotateToTop 3s linear 0s infinite;
+}
 /* SERVICES */
 
 .services {
@@ -363,8 +375,107 @@ header {
     padding: 100px;
 }
 .contact__content{
+    width: 70%;
     display: flex;
+    margin: 50px auto;
+    justify-content: space-between;
 }
-.contact__form{
-    
+
+.contact__map{
+    width: 60%;
+}
+.contact__form {
+    width: 40%;
+}
+.contact__form form{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-between;
+}
+
+.contact__form input{
+    font-size: 1rem;
+    padding: 1em;
+    border: 1px solid #888;
+    border-radius: 5px;
+}
+.contact__form input:focus{
+    border: 1px solid #af2239;
+    outline: none;
+    box-shadow: 0 4px 4px 4px rgba(175, 34, 57, 0.1);
+}
+.contact__form textarea{
+    font-size: 1rem;
+    padding: 1em;
+    border: 1px solid #888;
+    border-radius: 5px;
+}
+
+.contact__form textarea:focus{
+    border: 1px solid #af2239;
+    outline: none;
+}
+
+.contact__form button{
+    padding: 15px;
+    border: none;
+    background: #111;
+    color: #fff;
+    font-weight: bold;
+    font-size: 1rem;
+    font-family: 'Oswald', sans-serif;
+    transition: all .5s;
+    font-family: 'Oswald', sans-serif;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.contact__form button:hover{
+    background:#af2239;
+}
+
+.backToTop{
+    width: 60px;
+    height: 60px;
+    border-radius: 5px;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.25);
+    font-size: 2rem;
+    position: fixed;
+    text-align: center;
+    line-height: 56px;
+    display: block;
+    right: 50px;
+    bottom: 80px;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.cd-top--is-visible {
+    visibility: visible;
+    opacity: 1;
+  }
+
+@keyframes downToBottom{
+    form{
+        opacity: 1;
+        transform: translateY(0);
+    }
+    to{
+        opacity: 0;
+        transform: translateY(40px);
+    }
+}
+
+@keyframes rotateToTop{
+    0%{
+        transform: translateY(0px) scale(1);
+    }
+    50%{
+        transform: translateY(25px) scale(1.5);
+    }
+    100%{
+        transform: translateY(50px) scale(2);
+    }
 }
