--- a/homework/BC14_SAMAR_Pham Nguyen Phuong Khai/css/main.css
+++ b/homework/BC14_SAMAR_Pham Nguyen Phuong Khai/css/main.css
@@ -1,241 +1,443 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-html, body{
-    font-size: 16px;
-    font-family: 'Poppins', sans-serif;
-    line-height: 1.6;
-    color: #262626;
+html,
+body {
+  font-size: 16px;
+  font-family: "Poppins", sans-serif;
+  line-height: 1.6;
+  color: #262626;
 }
 
 /* FONT SIZE */
-h1{
-    font-size: 4rem;
-    line-height: 1.1;
-    font-weight: 900;
+h1 {
+  font-size: 4rem;
+  line-height: 1.1;
+  font-weight: 900;
 }
 
-h2{
-    font-size: 2.5rem;
+h2 {
+  font-size: 2.5rem;
 }
 
-h3{
-    font-size: 1.75rem;
+h3 {
+  font-size: 1.75rem;
 }
-h4{
-    font-size: 1.375rem;
-    font-weight: 700;
+h4 {
+  font-size: 1.375rem;
+  font-weight: 700;
 }
-
-h5{
-font-size: 1rem;
-}
-
-h6{
-    font-size: 0.875rem;
+h5 {
+  font-size: 1rem;
 }
 
-.btn{
-    padding: 15px 25px;
-    display: inline-block;
-    border: none;
-    border-radius: 30px;
-    color: #fff;
-    font-weight: 700;
-    text-transform: uppercase;
-    cursor: pointer;
+h6 {
+  font-size: 0.875rem;
 }
 
-.title h4{
-    color:#f55f8d;
+.btn {
+  padding: 15px 25px;
+  display: inline-block;
+  border: none;
+  border-radius: 30px;
+  color: #fff;
+  font-weight: 700;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.title h4 {
+  color: #f55f8d;
+}
+.backToTop {
+  width: 50px;
+  height: 50px;
+  border-radius: 5px;
+  color: #fff;
+  background-color: #f55f8d;
+  font-size: 2rem;
+  position: fixed;
+  text-align: center;
+  line-height: 50px;
+  display: block;
+  right: 15px;
+  bottom: 15px;
+  opacity: 0;
+  visibility: hidden;
+  box-shadow: 4px 24px -10px #f55f8d;
+}
+
+.cd-top--is-visible {
+  visibility: visible;
+  opacity: 1;
 }
 /* HEADER */
 .main__header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 65%;
-    margin: auto;
-    height: 130px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 75%;
+  margin: auto;
+  height: 130px;
 }
-.header__right{
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+.header__right {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
-.header__right li{
-    display: inline-block;
-    list-style: none;
-    margin: 0 15px;
+.header__right li {
+  display: inline-block;
+  list-style: none;
+  margin: 0 15px;
 }
 
 .header__right a {
-    text-decoration: none;
-    color:#070120;
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 1.35;
-    text-transform: capitalize;
-    transition: all .5s;
+  text-decoration: none;
+  color: #070120;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 1.35;
+  text-transform: capitalize;
+  transition: all 0.5s;
 }
 
-.header__right a:hover{
-    color: #f55f8d;
+.header__right a:hover {
+  color: #f55f8d;
 }
 
-.header__right button{
-    margin-left: 15px;
-    background: linear-gradient(to left,#f55f8d 0,#f8ae56 51%,#f55f8d 100%);
-    transition: all .5s;
-    padding: 20px 35px;
+.header__right button {
+  margin-left: 15px;
+  background: linear-gradient(to left, #f55f8d 0, #f8ae56 51%, #f55f8d 100%);
+  transition: all 0.5s;
+  padding: 20px 35px;
 }
 
 /* CAROUSEL */
 
-.carousel{
-    background-image: url(../img/bg4.png);
-    background-size: cover;
-    background-attachment: fixed;
-    padding: 50px 0;
+.carousel {
+  background-image: url(../img/bg4.png);
+  background-size: cover;
+  background-attachment: fixed;
+  padding: 50px 0;
 }
 
-.carousel__content{
-    width: 65%;
-    display: flex;
-    justify-content: space-between;
-    margin: 0 auto;
+.carousel__content {
+  width: 75%;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
 }
 
-.cc__left{
-    margin-right: 30px;
+.cc__left {
+  margin-right: 30px;
 }
-.cc__left h4{
-    color: #f55f8d;
+.cc__left h4 {
+  color: #f55f8d;
 }
-.cc__left p:first-of-type{
-    font-size: 1.375rem;
-    color: #636363;
-    margin: 10px 0;
+.cc__left p:first-of-type {
+  font-size: 1.375rem;
+  color: #636363;
+  margin: 10px 0;
 }
-.cc__left li{
-    list-style: none;
-    margin: 15px 0;
-    font-size: 1.375rem;
-    color: #636363;
-}
-
-.cc__left li i{
-    color: #fff;
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    background: linear-gradient(to left,#f55f8d 0,#f8ae56 1%,#f55f8d 100%);
-    text-align: center;
-    line-height: 35px;
-    margin-right: 10px;
+.cc__left li {
+  list-style: none;
+  margin: 15px 0;
+  font-size: 1.375rem;
+  color: #636363;
 }
 
-.cc__left button{
-    font-weight: 400;
-    padding: 20px 35px;
-    background: linear-gradient(to left,#f55f8d 0,#f8ae56 20%,#f55f8d 100%);
-    transition: all .5s;
-    cursor: pointer;
+.cc__left li i {
+  color: #fff;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background: linear-gradient(to left, #f55f8d 0, #f8ae56 1%, #f55f8d 100%);
+  text-align: center;
+  line-height: 35px;
+  margin-right: 10px;
 }
 
-.cc__left button:hover{
-    background: linear-gradient(to right,#f55f8d 0,#f8ae56 20%,#f55f8d 100%);
+.cc__left button {
+  font-weight: 400;
+  padding: 20px 35px;
+  background: linear-gradient(to left, #f55f8d 0, #f8ae56 20%, #f55f8d 100%);
+  transition: all 0.5s;
+  cursor: pointer;
 }
 
-.cc__right{
-position: relative;
-z-index: 1;
+.cc__left button:hover {
+  background: linear-gradient(to right, #f55f8d 0, #f8ae56 20%, #f55f8d 100%);
 }
 
-.cc__right__overlay{
-    position: absolute;
-    z-index: 2;
-    top: 0;
-    right: -100px;
+.cc__right {
+  position: relative;
+  z-index: 1;
+}
+
+.cc__right__overlay {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  right: -100px;
 }
 
 /* USB */
 
-.usp{
-    text-align: center;
-    padding: 30px 0;
+.usp {
+  text-align: center;
+  padding: 30px 0;
 }
 
-.usp__content{
-    width: 65%;
-    margin: 50px auto;
-    display: flex;
-    justify-content: space-evenly;
+.usp__content {
+  width: 75%;
+  margin: 50px auto;
+  display: flex;
+  justify-content: space-evenly;
 }
 
-.usp__item{
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 12px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    margin: 0 15px;
+.usp__item {
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 12px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  margin: 0 15px;
 }
 
-.usp__item h6:first-of-type, .ac__right h6:first-of-type{
-    margin-top: 15px;
-    color: #636363;
-    font-weight: 400;
+.usp__item h6:first-of-type,
+.ac__right h6:first-of-type {
+  margin-top: 15px;
+  color: #636363;
+  font-weight: 400;
 }
 
-.top__usp__item img{
-    background-size: cover;
-    width: 80%;
+.top__usp__item img {
+  background-size: cover;
+  width: 80%;
 }
 
 /* ABOUT US */
-.aboutUS{
-    background-image: url(../img/bg15.png);
-    background-attachment: fixed;
+.aboutUS {
+  background-image: url(../img/bg15.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center right;
 }
-.aboutUS__content{
-    width: 64%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+.aboutUS__content {
+  width: 75%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
-.ac__left{
-    margin-left: -40%;
+.ac__left {
+  margin-left: -40%;
 }
-.ac__left img{
-    border-radius: 0 100px 100px 0;
+.ac__left img {
+  border-radius: 0 100px 100px 0;
 }
 
-.ac__right{
-    margin-left: 100px;
+.ac__right {
+  margin-left: 100px;
 }
 
 .ac__right li {
-    list-style: none;
-    margin: 15px 0;
-    color: #636363;
-    font-weight: 400;
-    font-size: 1rem;
+  list-style: none;
+  margin: 15px 0;
+  color: #636363;
+  font-weight: 400;
+  font-size: 1rem;
 }
 
-.ac__right li i{
-    border: 2px solid #f55f8d;
-    border-radius: 50%;
-    width: 24px;
-    height: 24px;
-    font-size: 14px;
-    text-align: center;
-    line-height: 24px;
-    font-weight: thin;
-    color: #f55f8d;
-    margin-right: 10px;
+.ac__right li i {
+  border: 2px solid #f55f8d;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  font-size: 14px;
+  text-align: center;
+  line-height: 24px;
+  font-weight: thin;
+  color: #f55f8d;
+  margin-right: 10px;
+}
+
+/* NUMBER */
+
+.number {
+  background: #fffbf7;
+  background-image: url(../img/bg14.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  margin: 100px 0;
+  padding: 50px 0;
+}
+.number__contents {
+  width: 75%;
+  margin: auto;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.number__items {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.number__icon {
+  background: linear-gradient(to right, #f55f8d 0, #f8ae56 100%);
+  width: 80px;
+  height: 80px;
+  text-align: center;
+  line-height: 100px;
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+
+.number__icon i {
+  text-align: center;
+  font-size: 36px;
+  color: #fff;
+}
+
+/* FEATURES */
+
+.feature {
+  background-image: url(../img/bg2.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin: 50px 0;
+}
+.feature__content {
+  width: 75%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+}
+.feature__left {
+  width: 50%;
+  padding: 30px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.feature__right {
+  width: 50%;
+  padding: 30px;
+}
+.feature__right img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
+.feature__item {
+  background-color: #fff;
+  padding: 30px;
+  box-shadow: 0 0px 60px 0px rgb(0 0 0 / 10%);
+  border-radius: 10px;
+  margin: 30px 0;
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+}
+.feature__icon {
+  font-size: 70px;
+  margin-right: 20px;
+  font-weight: thin;
+  color: #f55f8d;
+}
+.feature__text p {
+  color: #888;
+}
+
+#feature__different {
+  margin-left: 50px;
+}
+
+/* PORTFOLIO */
+
+.portfolio {
+  background-image: url(../img/bg17.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top center;
+  padding-top: 115px;
+}
+
+.portfolio__content {
+  width: 75%;
+  margin: auto;
+}
+
+.port__top,
+.port__bottom {
+  display: flex;
+  justify-content: space-between;
+  margin: 30px 0 0 0;
+}
+
+.port__top__left,
+.port__bot__left {
+  width: 60%;
+  padding: 0 15px 0 15px;
+}
+
+.port__top__left img {
+  width: 100%;
+  height: 100%;
+  border-radius: 25px;
+}
+.port__top__right,
+.port__bot__right {
+  width: 40%;
+  padding: 0 15px 0 15px;
+}
+
+.port__top__right img,
+.port__bot__left img,
+.port__bot__right img {
+  width: 100%;
+  height: 100%;
+  border-radius: 25px;
+}
+
+.port__bot__top {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 0 30px 0;
+}
+
+.port__bot__bot {
+  display: flex;
+}
+
+/* PLAN */
+
+.plan {
+  background-image: url(../img/bg16.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding-top: 115px;
+}
+
+.plan__content {
+  width: 75%;
+  margin: auto;
+}
+
+.plan__option {
+  display: flex;
+}
+
+.plan__item {
+  padding: 30px;
+  background-color: #fff;
 }
